# tree-sitter-forkjoin

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-forkjoin.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_forkjoin/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterForkjoin/: forkjoin.h
bindings/swift/TreeSitterForkjoinTests/: TreeSitterForkjoinTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: assign.txt  call.txt  com_espaco.txt  com_linha_em_branco.txt  comentario.txt  def.txt  ebook1.txt  ebook2.txt  ebook3.txt  ebook4.txt  fork.txt  join.txt  sem_espaco.txt  separado.txt  simple.txt
